--- a/themes/airevisuelle/layouts/singles/promotions.html
+++ b/themes/airevisuelle/layouts/singles/promotions.html
@@ -1,5 +1,130 @@
 {{ define "main" }}
 <main class="main" id="promotions">
 
+        <!-- Page title -->
+        <section id="page-title" class="background-image background-overlay-dark" style="background-image:url(/img/new/service-header.jpg);">
+            <div class="container">
+
+                <div class="page-title">
+                    <div data-animation="fadeIn" class="text-light">
+                        <h1 data-animation="fadeInUp" data-animation-delay="1000">Promotions</h1></div>
+                </div>
+            </div>
+        </section>
+        <!-- end: Page title -->	
+
+
+   <!-- Content -->
+        <section id="page-content">
+            <div class="container">
+
+
+                <!-- Blog -->
+                <div id="blog" class="post-thumbnails promotions-listing" data-lightbox="gallery"> 
+
+                    <!-- Post item-->
+                    <div class="post-item">
+                        <div class="post-item-wrap">
+                            <div class="post-image">
+                                <a class="image-hover-zoom" href="/img/new/brochure1.jpg" data-lightbox="gallery-item"><img alt="" src="/img/new/brochure1.jpg"></a>
+                            </div>
+                            <div class="post-item-description">
+                                
+                                <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017 - Jan 23, 2017</span>
+                                <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique assumenda eveniet, quos repudiandae ducimus vitae sint nesciunt nemo veritatis placeat earum quaerat et iste officia, veniam accusantium, perferendis accusamus! Dolorem.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, aliquam!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: Post item-->
+
+                    <hr>
+
+
+                    <!-- Post item-->
+                    <div class="post-item">
+                        <div class="post-item-wrap">
+                            <div class="post-image">
+                                <a class="image-hover-zoom" href="/img/new/brochure1.jpg" data-lightbox="gallery-item"><img alt="" src="/img/new/brochure1.jpg"></a>
+                            </div>
+                            <div class="post-item-description">
+                                
+                                <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017 - Jan 23, 2017</span>
+                                <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique assumenda eveniet, quos repudiandae ducimus vitae sint nesciunt nemo veritatis placeat earum quaerat et iste officia, veniam accusantium, perferendis accusamus! Dolorem.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, aliquam!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: Post item-->
+
+                    <hr>
+
+
+
+                    <!-- Post item-->
+                    <div class="post-item">
+                        <div class="post-item-wrap">
+                            <div class="post-image">
+                                    <a class="image-hover-zoom" href="/img/new/brochure1.jpg" data-lightbox="gallery-item"><img alt="" src="/img/new/brochure1.jpg"></a>
+                            </div>
+                            <div class="post-item-description">
+                                
+                                <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017 - Jan 23, 2017</span>
+                                <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique assumenda eveniet, quos repudiandae ducimus vitae sint nesciunt nemo veritatis placeat earum quaerat et iste officia, veniam accusantium, perferendis accusamus! Dolorem.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, aliquam!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: Post item-->
+
+                    <hr>                                        
+
+
+                </div>
+                <!-- end: Blog -->
+
+                <!-- Pagination -->
+                <div class="pagination pagination-simple">
+                    <ul>
+                        <li>
+                            <a href="#" aria-label="Previous"> <span aria-hidden="true"><i class="fa fa-angle-left"></i></span> </a>
+                        </li>
+                        <li><a href="#">1</a> </li>
+                        <li><a href="#">2</a> </li>
+                        <li class="active"><a href="#">3</a> </li>
+                        <li><a href="#">4</a> </li>
+                        <li><a href="#">5</a> </li>
+                        <li>
+                            <a href="#" aria-label="Next"> <span aria-hidden="true"><i class="fa fa-angle-right"></i></span> </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- end: Pagination -->
+
+            </div>
+        </section>
+        <!-- end: Content -->        
+
+
+<section class="background-grey">
+	<div class="container">
+		<div class="text-center">
+			<h2>Aliquam enim enim, pharetra in sodales</h2>
+			<p class="lead">
+				Aliquam enim enim, pharetra in sodales at, interdum sit amet dui. Nullam vulputate euis od urna non pharetra. Phasellus bland matt is ipsum, ac laoreet lorem lacinia et. interum sit amet dui.
+			</p>
+
+			<a class="btn btn-default icon-left" href="#"><span>Apply now!</span></a>
+		</div>
+	</div>
+</section>
+
+
 </main>
 {{ end }}
