--- a/themes/airevisuelle/layouts/articles/list.html
+++ b/themes/airevisuelle/layouts/articles/list.html
@@ -1,10 +1,227 @@
 {{ define "main" }}
 <main class="main" id="{{ .Type }}-list">
-		{{ .Content}}
-			{{ range $i, $e := sort .Pages ".Params.ordre" "asce" }}
-			{{ $mod1 := modBool $i 1}}
-			{{ $mod2 := modBool $i 2}}
-			{{ $mod3 := modBool $i 3}}
-		{{ end }}
+
+        <!-- Page title -->
+        <section id="page-title" class="background-image background-overlay-dark" style="background-image:url(/img/new/service-header.jpg);">
+            <div class="container">
+
+                <div class="page-title">
+                    <div data-animation="fadeIn" class="text-light">
+                        <h1 data-animation="fadeInUp" data-animation-delay="1000">Blog</h1></div>
+                </div>
+            </div>
+        </section>
+        <!-- end: Page title -->	
+
+
+     <!-- Content -->
+        <section id="page-content" class="sidebar-right">
+            <div class="container">
+                <div class="row">
+                    <!-- post content -->
+                    <div class="content col-md-9" id="blog-listing">
+                        <!-- Page title -->
+
+
+                        <!-- Blog -->
+                        <div id="blog" class="post-thumbnails">
+
+                            <!-- Post item-->
+                            <div class="post-item">
+                                <div class="post-item-wrap">
+                                    <div class="post-image">
+                                        <a href="#">
+                                            <img alt="" src="/img/new/service1.jpg">
+                                        </a>
+                                        <span class="post-meta-category"><a href="">Lifestyle</a></span>
+                                    </div>
+                                    <div class="post-item-description">
+                                        <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                        <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017</span>
+
+                                        <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+
+                                        <a href="#" class="item-link">Read More <i class="fa fa-arrow-right"></i></a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end: Post item-->
+
+                            <hr>
+
+                            <!-- Post item-->
+                            <div class="post-item">
+                                <div class="post-item-wrap">
+                                    <div class="post-image">
+                                        <a href="#">
+                                            <img alt="" src="/img/new/service1.jpg">
+                                        </a>
+                                        <span class="post-meta-category"><a href="">Lifestyle</a></span>
+                                    </div>
+                                    <div class="post-item-description">
+                                        <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                        <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017</span>
+                                        
+                                        <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+
+                                        <a href="#" class="item-link">Read More <i class="fa fa-arrow-right"></i></a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end: Post item-->
+
+                            <hr>
+
+                            <!-- Post item-->
+                            <div class="post-item">
+                                <div class="post-item-wrap">
+                                    <div class="post-image">
+                                        <a href="#">
+                                            <img alt="" src="/img/new/service1.jpg">
+                                        </a>
+                                        <span class="post-meta-category"><a href="">Lifestyle</a></span>
+                                    </div>
+                                    <div class="post-item-description">
+                                        <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                        <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017</span>
+                                        
+                                        <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+
+                                        <a href="#" class="item-link">Read More <i class="fa fa-arrow-right"></i></a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end: Post item-->
+
+                            <hr>
+
+                            <!-- Post item-->
+                            <div class="post-item">
+                                <div class="post-item-wrap">
+                                    <div class="post-image">
+                                        <a href="#">
+                                            <img alt="" src="/img/new/service1.jpg">
+                                        </a>
+                                        <span class="post-meta-category"><a href="">Lifestyle</a></span>
+                                    </div>
+                                    <div class="post-item-description">
+                                        <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                        <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017</span>
+                                        
+                                        <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+
+                                        <a href="#" class="item-link">Read More <i class="fa fa-arrow-right"></i></a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end: Post item-->
+
+                            <hr>
+
+                            <!-- Post item-->
+                            <div class="post-item">
+                                <div class="post-item-wrap">
+                                    <div class="post-image">
+                                        <a href="#">
+                                            <img alt="" src="/img/new/service1.jpg">
+                                        </a>
+                                        <span class="post-meta-category"><a href="">Lifestyle</a></span>
+                                    </div>
+                                    <div class="post-item-description">
+                                        <h2><a href="#">Lighthouse, standard post with a single image</a></h2>
+                                        <span class="post-meta-date"><i class="fa fa-calendar-o"></i>Jan 21, 2017</span>
+                                        
+                                        <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet.</p>
+
+                                        <a href="#" class="item-link">Read More <i class="fa fa-arrow-right"></i></a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end: Post item-->    
+
+                            <hr>                                                                                                            
+
+
+
+
+                        </div>
+                        <!-- end: Blog -->
+                        
+                        <!-- Pagination -->
+                        <div class="pagination pagination-simple">
+                            <ul>
+                                <li>
+                                    <a href="#" aria-label="Previous"> <span aria-hidden="true"><i class="fa fa-angle-left"></i></span> </a>
+                                </li>
+                                <li><a href="#">1</a> </li>
+                                <li><a href="#">2</a> </li>
+                                <li class="active"><a href="#">3</a> </li>
+                                <li><a href="#">4</a> </li>
+                                <li><a href="#">5</a> </li>
+                                <li>
+                                    <a href="#" aria-label="Next"> <span aria-hidden="true"><i class="fa fa-angle-right"></i></span> </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- end: Pagination -->
+
+                    </div>
+                    <!-- end: post content -->
+
+                    <!-- Sidebar-->
+                    <!-- Sidebar-->
+                    <div class="sidebar col-md-3">
+                        <div class="pinOnScroll">
+                            <!--widget newsletter-->
+                            <div class="widget  widget-newsletter">
+                            <form id="widget-search-form-sidebar" action="search-results-page.html" method="get" class="form-inline">
+                                <div class="input-group">
+                                    <input type="text" aria-required="true" name="q" class="form-control widget-search-form" placeholder="Search for pages..."> <span class="input-group-btn">
+				                  <button type="submit" id="widget-widget-search-form-button" class="btn btn-default"><i class="fa fa-search"></i></button>
+				                  </span> </div>
+                            </form>
+                                 
+                            </div>
+                            <!--end: widget newsletter-->
+
+                            <!--Services-->
+                            <div class="widget clearfix widget-categories">
+                                <h4 class="widget-title">Categories</h4>
+                                <ul class="list list-arrow-icons">
+                                    <li> <a title="" href="#">Development </a> </li>
+                                    <li> <a title="" href="#">Branding </a> </li>
+                                    <li> <a title="" href="#">Marketing </a> </li>
+                                    <li> <a title="" href="#">Branding </a> </li>
+                                    <li> <a title="" href="#">Strategy solutions</a> </li>
+                                    <li> <a title="" href="#">Copywriting </a> </li>
+                                </ul>
+                            </div>
+                            <!--End: Services-->
+
+                            <!--Archive-->
+                            <div class="widget clearfix widget-archive">
+                                <h4 class="widget-title">Archive</h4>
+                                <ul class="list list-lines">
+                                    <li>Jun 2015 </li>
+                                    <li>May 2015 </li>
+                                    <li>Apr 2015 </li>
+                                    <li>Mar 2015 </li>
+                                </ul>
+                            </div>
+                            <!--End: Archive-->
+                        </div>
+                    </div>
+                    <!-- end: Sidebar-->
+
+                </div>
+            </div>
+        </section>
+        <!-- end: Content -->        
+
 </main>
 {{ end }}
