--- a/themes/airevisuelle/layouts/articles/single.html
+++ b/themes/airevisuelle/layouts/articles/single.html
@@ -1,5 +1,128 @@
 {{ define "main" }}
 <main class="main" id="{{ .Type }}-indiv">
+
+        <!-- Page title -->
+        <section id="page-title" class="background-image background-overlay-dark header-single-blog" style="background-image:url(/img/new/service-header.jpg);">
+            <div class="container">
+
+                <div class="page-title">
+                    <div data-animation="fadeIn" class="text-light">
+                    	
+                        <h1 data-animation="fadeInUp" data-animation-delay="1000">Lorem ipsum dolor sit amet.</h1></div>
+                        <div class="small m-b-20" data-animation="fadeInUp"  data-animation-delay="1500">May 16, 2017 | <a href="#">by admin</a> <span class="post-meta-category"> | <a href="">Technology</a></span></div>
+                </div>
+            </div>
+        </section>
+        <!-- end: Page title -->	
+
+    <!-- Page Content -->
+        <section id="page-content" class="sidebar-right">
+            <div class="container">
+                <div class="row">
+                    <!-- content -->
+                    <div class="content col-md-9">
+                        <!-- Blog -->
+                        <div id="blog" class="single-post">
+                            <!-- Post single item-->
+                            <div class="post-item">
+                                <div class="post-item-wrap">
+                                    <div class="post-image">
+                                        <a href="#">
+                                            <img alt="" src="images/blog/1.jpg">
+                                        </a>
+                                    </div>
+                                    <div class="post-item-description">
+                                        <h2>Lighthouse, standard post with a single image</h2>
+          
+                                        <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet. Ut nec metus a mi ullamcorper hendrerit. Nulla facilisi. Pellentesque sed nibh a quam accumsan dignissim quis quis urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id dolor dui, dapibus gravida elit. Donec consequat laoreet sagittis. Suspendisse ultricies ultrices viverra. Morbi rhoncus laoreet tincidunt. Mauris interdum convallis metus.M</p>
+                                        <blockquote>
+                                            <p>The world is a dangerous place to live; not because of the people who are evil, but because of the people who don't do anything about it.</p>
+                                            <small>by <cite>Albert Einstein</cite></small>
+                                        </blockquote>
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id dolor dui, dapibus gravida elit. Donec consequat laoreet sagittis. Suspendisse ultricies ultrices viverra. Morbi rhoncus laoreet tincidunt. Mauris interdum convallis metus. Suspendisse vel lacus est, sit amet tincidunt erat. Etiam purus sem, euismod eu vulputate eget, porta quis sapien. Donec tellus est, rhoncus vel scelerisque id, iaculis eu nibh.</p>
+
+
+                                        <p>Donec posuere bibendum metus. Quisque gravida luctus volutpat. Mauris interdum, lectus in dapibus molestie, quam felis sollicitudin mauris, sit amet tempus velit lectus nec lorem. Nullam vel mollis neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel enim dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed tincidunt accumsan massa id viverra. Sed sagittis, nisl sit amet imperdiet convallis, nunc tortor consequat tellus, vel molestie neque nulla non ligula. Proin tincidunt tellus ac porta volutpat. Cras mattis congue lacus id bibendum. Mauris ut sodales libero. Maecenas feugiat sit amet enim in accumsan.</p>
+
+                                        <p>Duis vestibulum quis quam vel accumsan. Nunc a vulputate lectus. Vestibulum eleifend nisl sed massa sagittis vestibulum. Vestibulum pretium blandit tellus, sodales volutpat sapien varius vel. Phasellus tristique cursus erat, a placerat tellus laoreet eget. Fusce vitae dui sit amet lacus rutrum convallis. Vivamus sit amet lectus venenatis est rhoncus interdum a vitae velit.</p>
+
+                                    </div>
+                                    <div class="post-tags">
+                                        <a href="#">Life</a>
+                                        <a href="#">Sport</a>
+                                        <a href="#">Tech</a>
+                                        <a href="#">Travel</a>
+                                    </div>
+                                    <div class="post-navigation">
+                                        <a href="blog-single-slider.html" class="post-prev">
+                                            <div class="post-prev-title"><span>Previous Post</span>Post with a slider and lightbox</div>
+                                        </a>
+                                        <a href="blog-masonry-3.html" class="post-all">
+                                            <i class="fa fa-th"></i>
+                                        </a>
+                                        <a href="blog-single-video.html" class="post-next">
+                                            <div class="post-next-title"><span>Next Post</span>Post with YouTube Video</div>
+                                        </a>
+                                    </div>
+                                    <!-- Comments -->
+ 
+                                </div>
+                            </div>
+                            <!-- end: Post single item-->
+                        </div>
+
+                    </div>
+                    <!-- end: content -->
+
+                    <!-- Sidebar-->
+                    <div class="sidebar col-md-3">
+                        <div class="pinOnScroll">
+                            <!--widget newsletter-->
+                            <div class="widget  widget-newsletter">
+                            <form id="widget-search-form-sidebar" action="search-results-page.html" method="get" class="form-inline">
+                                <div class="input-group">
+                                    <input type="text" aria-required="true" name="q" class="form-control widget-search-form" placeholder="Search for pages..."> <span class="input-group-btn">
+				                  <button type="submit" id="widget-widget-search-form-button" class="btn btn-default"><i class="fa fa-search"></i></button>
+				                  </span> </div>
+                            </form>
+                                 
+                            </div>
+                            <!--end: widget newsletter-->
+
+                            <!--Services-->
+                            <div class="widget clearfix widget-categories">
+                                <h4 class="widget-title">Categories</h4>
+                                <ul class="list list-arrow-icons">
+                                    <li> <a title="" href="#">Development </a> </li>
+                                    <li> <a title="" href="#">Branding </a> </li>
+                                    <li> <a title="" href="#">Marketing </a> </li>
+                                    <li> <a title="" href="#">Branding </a> </li>
+                                    <li> <a title="" href="#">Strategy solutions</a> </li>
+                                    <li> <a title="" href="#">Copywriting </a> </li>
+                                </ul>
+                            </div>
+                            <!--End: Services-->
+
+                            <!--Archive-->
+                            <div class="widget clearfix widget-archive">
+                                <h4 class="widget-title">Archive</h4>
+                                <ul class="list list-lines">
+                                    <li>Jun 2015 </li>
+                                    <li>May 2015 </li>
+                                    <li>Apr 2015 </li>
+                                    <li>Mar 2015 </li>
+                                </ul>
+                            </div>
+                            <!--End: Archive-->
+                        </div>
+                    </div>
+                    <!-- end: Sidebar-->
+
+
+                </div>
+            </div>
+        </section>
+        <!-- end: Page Content -->        
 	
 </main>
 {{ end }}
