--- a/themes/airevisuelle/layouts/services/list.html
+++ b/themes/airevisuelle/layouts/services/list.html
@@ -1,7 +1,166 @@
 {{ define "main" }}
 <main class="main" id="{{ .Type }}-list">
 	
+        <!-- Page title -->
+        <section id="page-title" class="background-image background-overlay-dark header-single-blog" style="background-image:url(/img/new/service-header.jpg);">
+            <div class="container">
 
+                <div class="page-title">
+                    <div data-animation="fadeIn" class="text-light">
+                    	
+                        <h1 data-animation="fadeInUp" data-animation-delay="1000">Services</h1></div>
+                </div>
+            </div>
+        </section>
+        <!-- end: Page title -->	
+
+
+     <!-- Content -->
+<section id="page-content">
+    <div class="container">
+
+
+                <!-- Portfolio -->
+                <div id="portfolio" class="grid-layout portfolio-2-columns" data-margin="0">
+
+
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-uielements pf-media pf-icons pf-uielements pf-graphics">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="/img/new/service2.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Last Iceland Sunshine</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+            
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-uielements pf-media pf-icons pf-uielements pf-graphics">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="/img/new/service2.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Last Iceland Sunshine</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-uielements pf-media pf-icons pf-uielements pf-graphics">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="/img/new/service2.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Last Iceland Sunshine</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-uielements pf-media pf-icons pf-uielements pf-graphics">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="/img/new/service2.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Last Iceland Sunshine</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+
+                    <!-- portfolio item -->                   <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-uielements pf-graphics">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/portfolio/67.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a title="Paper Pouch!" data-lightbox="iframe" href="https://www.youtube.com/watch?v=k6Kly58LYzY"><i class="fa fa-play"></i></a>
+                                <a href="portfolio-page-grid-gallery.html"><i class="fa fa-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+
+                    <!-- portfolio item -->
+                    <div class="portfolio-item no-overlay pf-illustrations pf-media pf-icons pf-Media pf-uielements pf-graphics">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay-timeout="1500">
+                                    <a href="#"><img src="images/portfolio/68.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/71.jpg" alt=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-illustrations pf-uielements pf-media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/portfolio/69.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Luxury Wine</h3>
+                                    <span>Graphics / Branding</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-uielements pf-media pf-icons pf-uielements pf-graphics">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Last Iceland Sunshine</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+
+
+
+
+                </div>
+                <!-- end: Portfolio -->
+
+            </div>
+        </section>
+        <!-- end: Content -->        
 
 </main>
 {{ end }}
