--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -9,7 +9,7 @@
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
                 <li class="dropdown"> <a href="#">Examen de la vue</a></li>
-                <!-- <li class="dropdown mega-menu-item"> <a href="#">Promotions</a></li>  -->
+                <li class="dropdown mega-menu-item"> <a href="#">Promotions</a></li> 
                 <li class="dropdown mega-menu-item"> <a href="/nous-rejoindre">Contact</a></li>
             </ul>
         </nav>
