--- a/themes/airevisuelle/layouts/articles/list.html
+++ b/themes/airevisuelle/layouts/articles/list.html
@@ -40,7 +40,7 @@
                                     {{ end }}
                                     <div class="post-item-description">
                                         <h2><a href="{{.Permalink}}">{{.Title}}</a></h2>
-                                        <span class="post-meta-date"><i class="fa fa-calendar-o"></i></span>
+                                        <span class="post-meta-date"><i class="fa fa-calendar-o"></i>{{.Date}}</span>
 
                                         <p>{{.Summary}}</p>
 
