--- a/themes/airevisuelle/layouts/singles/a-propos.html
+++ b/themes/airevisuelle/layouts/singles/a-propos.html
@@ -35,16 +35,8 @@
 					</div>
 
 				</div>
-				<!--call-to-action background image -->
-        <div class="call-to-action background-image" style="background-image:url('/img/airevisuelle-cta.jpg')">
-            <div class="col-md-10">
-                <h3 class="text-light">Promotion du moment: <span>50%</span> sur la collection XYZ</h3>
-                <p class="text-light">Prenez rendez-vous avec un expert facilement grâce à notre systèmes de réservation en ligne !</p>
-            </div>
-            <div class="col-md-2">
-                <a class="btn btn-light btn-outline">Rendez-vous</a> </div>
-        </div>
-        <!--END: call-to-action background image -->
+				
+				{{partial "site/promocta.html" .}}
 			</div>
 		</section>
 
