--- a/themes/airevisuelle/layouts/articles/single.html
+++ b/themes/airevisuelle/layouts/articles/single.html
@@ -70,7 +70,7 @@
                     <div class="sidebar col-md-3">
                         <div class="pinOnScroll">
                             <!--widget newsletter-->
-                            <div class="widget  widget-newsletter">
+                            <!-- <div class="widget  widget-newsletter">
                             <form id="widget-search-form-sidebar" action="search-results-page.html" method="get" class="form-inline">
                                 <div class="input-group">
                                     <input type="text" aria-required="true" name="q" class="form-control widget-search-form" placeholder="Search for pages..."> <span class="input-group-btn">
@@ -78,25 +78,22 @@
 				                  </span> </div>
                             </form>
                                  
-                            </div>
+                            </div> -->
                             <!--end: widget newsletter-->
 
                             <!--Services-->
                             <div class="widget clearfix widget-categories">
-                                <h4 class="widget-title">Categories</h4>
+                                <h4 class="widget-title">{{ i18n "services" }}</h4>
                                 <ul class="list list-arrow-icons">
-                                    <li> <a title="" href="#">Development </a> </li>
-                                    <li> <a title="" href="#">Branding </a> </li>
-                                    <li> <a title="" href="#">Marketing </a> </li>
-                                    <li> <a title="" href="#">Branding </a> </li>
-                                    <li> <a title="" href="#">Strategy solutions</a> </li>
-                                    <li> <a title="" href="#">Copywriting </a> </li>
+                                    {{ range where .Site.RegularPages "Type" "services"}}
+                                    <li><a title="{{.Params.resume.title}}" href="{{.Permalink}}">{{.Params.resume.title}}</a></li>
+                                    {{ end }}
                                 </ul>
                             </div>
                             <!--End: Services-->
 
                             <!--Archive-->
-                            <div class="widget clearfix widget-archive">
+                            <!-- <div class="widget clearfix widget-archive">
                                 <h4 class="widget-title">Archive</h4>
                                 <ul class="list list-lines">
                                     <li>Jun 2015 </li>
@@ -104,7 +101,7 @@
                                     <li>Apr 2015 </li>
                                     <li>Mar 2015 </li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <!--End: Archive-->
                         </div>
                     </div>
