Added rendez-vous page

--- a/themes/airevisuelle/assets/scss/portfolio.scss
+++ b/themes/airevisuelle/assets/scss/portfolio.scss
@@ -146,7 +146,7 @@
                 margin-bottom: 0;
                 padding-bottom: 0;
             }
-            button {
+            a.btn {
                 display: block;
                 margin: auto;
                 opacity: 0;
@@ -196,7 +196,7 @@
                 }
                 span,
                 p,
-                button {
+                a.btn {
                     opacity: 1;
                 }
             }
