--- a/themes/airevisuelle/assets/scss/custom.scss
+++ b/themes/airevisuelle/assets/scss/custom.scss
@@ -19,6 +19,29 @@
 		fill: #fff;
 	}
 }
+/* Rendez-vous */
+
+#rdv  {
+	h1 {
+		font-size: 2em;
+		margin-bottom: 20px;
+	}
+	.team-members .team-member .team-desc {
+		p {
+			margin-bottom: 5px;
+		}
+	}
+	.row .col-sm-1:nth-child(12n+13), .row .col-sm-2:nth-child(6n+7), .row .col-sm-3:nth-child(4n+5), .row .col-sm-6:nth-child(2n+3) {
+		clear: none;
+	}
+	div.od-box {
+		@media (max-width: 991px) {
+			h2 {
+				margin-top: 30px;
+			}
+		}
+	}
+}
 
 /* Catalogue */
 
