--- a/themes/airevisuelle/layouts/promotions/list.html
+++ b/themes/airevisuelle/layouts/promotions/list.html
@@ -30,7 +30,7 @@
                             </div>
                             <div class="post-item-description">
                                 
-                                <h2><a href="#">{{.Title}}</a></h2>
+                                <h2><a href="#nothing">{{.Title}}</a></h2>
                                 <span class="post-meta-date"><i class="fa fa-calendar-o"></i>{{.Params.startdate}} - {{.Params.enddate}}</span>
                                 {{ .Content }}
                             </div>
